EL-87: Deleted ConcurrentLinkedPublisher and related tests.