@@ -123,15 +123,15 @@ public class ElementLoaderTest {
 
 // TODO: Fix with EL-88
 //Just the startup event
-//        Assert.assertEquals(testService.getConsumedEvents().size(), 1);
-//        Assert.assertEquals(testService.getConsumedEvents().getFirst().getEventName(), ElementLoader.SYSTEM_EVENT_ELEMENT_LOADED);
-//        Assert.assertEquals(testService.getConsumedEventObjects().size(), 2);
-//        Assert.assertEquals(testService.getConsumedEventObjects().get(0).name(), TEST_ELEMENT_EVENT_1);
-//        Assert.assertEquals(testService.getConsumedEventObjects().get(0).arguments().get(0), eventObject1);
-//        Assert.assertEquals(testService.getConsumedEventObjects().get(0).arguments().get(1), eventObject1);
-//        Assert.assertEquals(testService.getConsumedEventObjects().get(1).name(), TEST_ELEMENT_EVENT_2);
-//        Assert.assertEquals(testService.getConsumedEventObjects().get(1).arguments().get(0), eventObject2);
-//        Assert.assertEquals(testService.getConsumedEventObjects().get(1).arguments().get(1), eventObject2);
+        Assert.assertEquals(testService.getConsumedEvents().size(), 1);
+        Assert.assertEquals(testService.getConsumedEvents().getFirst().getEventName(), ElementLoader.SYSTEM_EVENT_ELEMENT_LOADED);
+        Assert.assertEquals(testService.getConsumedEventObjects().size(), 2);
+        Assert.assertEquals(testService.getConsumedEventObjects().get(0).name(), TEST_ELEMENT_EVENT_1);
+        Assert.assertEquals(testService.getConsumedEventObjects().get(0).arguments().get(0), eventObject1);
+        Assert.assertEquals(testService.getConsumedEventObjects().get(0).arguments().get(1), eventObject1);
+        Assert.assertEquals(testService.getConsumedEventObjects().get(1).name(), TEST_ELEMENT_EVENT_2);
+        Assert.assertEquals(testService.getConsumedEventObjects().get(1).arguments().get(0), eventObject2);
+        Assert.assertEquals(testService.getConsumedEventObjects().get(1).arguments().get(1), eventObject2);
 
     }
 
